correct more css file spacing, colour and styling

--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,25 @@
     padding: 0;
 }
 
+a   {
+    list-style: none;
+    color: #F0FFF0;
+    text-decoration: none;
+}
+
 body    {
-    background-color: #F0FFF0;
+    background-color: white;
+}
+
+.nav-bar    {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 80px;
 }
 
 .header {
     background-color: #1f2937;
     color: white;
-    display: flex;
 }
 
 .main-title  {
@@ -18,12 +29,19 @@ body    {
     color: white;
     padding: 10px 0;
     display: flex;
+    padding: 20px 80px;
 }
 
 #main-title {
     height: 200px;
     width: 300px;
-    background-color: aqua;
+    background-color: gray;
+}
+
+.portfolio  {
+    background-color: white;
+    padding: 20px 80px;
+    text-align: center;
 }
 
 .boxes  {
@@ -32,13 +50,40 @@ body    {
     width: 50px;
     padding: 20px;
     margin: 20px;
-    background-color: white;
     width: auto;
     justify-content: space-evenly;
     height: auto;
 }
 
 .box1, .box2, .box3, .box4   {
-    background-color: aqua;
+    background-color: white;
     height: 100px;
+    border-radius: 10px;
+    padding: 5px;
+    border-style: solid;
+    border-color: #3882f6;
+}
+
+.quote  {
+    background-color: #e5e7eb;
+    padding: 20px 80px;
+}
+
+.call-to-action {
+    padding: 20px 80px;
+    margin-bottom: 30px;
+}
+
+.bubble {
+    background-color: #3882f6;
+    padding: 20px;
+    width: auto;
+    color: white;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+footer  {
+    text-align: center;
 }
